// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardItem should match snapshot Component 1`] = `
<div>
  <div>
    Card Item 
    primary
  </div>
</div>
`;

exports[`CardItem should match snapshot Component 2`] = `
<div>
  <div>
    Card Item 
    secondary
  </div>
</div>
`;
